Fix Product Image Gallery block overflow when multiple images are used

--- a/assets/js/atomic/blocks/product-elements/product-image-gallery/style.scss
+++ b/assets/js/atomic/blocks/product-elements/product-image-gallery/style.scss
@@ -18,7 +18,6 @@
 }
 
 
-.woocommerce .wp-block-woocommerce-product-image-gallery .woocommerce-product-gallery.images {
-	width: auto;
+.woocommerce .wp-block-woocommerce-product-image-gallery .woocommerce-product-gallery.images, .woocommerce div.product div.images a img {
+	width: 100%;	
 }
-
